[VP] Updated option 'theme_mods_Parallax-One-production'
VP-Action: option/update/theme_mods_Parallax-One-production

X-VP-Version: 4.0-beta2
X-VP-Environment: default

--- a/wp-content/vpdb/options/th/theme_mods_Parallax-One-production.ini
+++ b/wp-content/vpdb/options/th/theme_mods_Parallax-One-production.ini
@@ -15,4 +15,5 @@ option_value["header_image_data"]["url"] = "<<[site-url]>>/wp-content/uploads/20
 option_value["header_image_data"]["thumbnail_url"] = "<<[site-url]>>/wp-content/uploads/2019/11/cropped-graphs-job-laptop-papers-590016.jpg"
 option_value["header_image_data"]["height"] = 993
 option_value["header_image_data"]["width"] = 1500
+option_value["parallax_one_bigtitle_background"] = "rgba(17,107,191,0.7)"
 autoload = "yes"
