[VP] Updated option 'theme_mods_Parallax-One-production'
VP-Action: option/update/theme_mods_Parallax-One-production

X-VP-Version: 4.0-beta2
X-VP-Environment: default

--- a/wp-content/vpdb/options/th/theme_mods_Parallax-One-production.ini
+++ b/wp-content/vpdb/options/th/theme_mods_Parallax-One-production.ini
@@ -6,7 +6,7 @@ option_value["paralax_one_logo"] = ""
 option_value["paralax_one_sticky_header"] = <boolean> false
 option_value["paralax_one_full_width_template"] = <boolean> false
 option_value["parallax_one_header_title"] = "Digital Marketing Company"
-option_value["parallax_one_header_subtitle"] = "SEO and Analytics Done Right for Business Websites and Mobile Apps"
+option_value["parallax_one_header_subtitle"] = "SEO and PPC Done Right for Business Websites and Mobile Apps"
 option_value["parallax_one_header_button_text"] = "Work With Us"
 option_value["header_image"] = "<<[site-url]>>/wp-content/uploads/2019/11/cropped-graphs-job-laptop-papers-590016.jpg"
 option_value["header_image_data"] = <stdClass>
