--- a/wp-content/vpdb/options/th/theme_mods_Parallax-One-production.ini
+++ b/wp-content/vpdb/options/th/theme_mods_Parallax-One-production.ini
@@ -23,4 +23,8 @@ option_value["parallax_one_testimonials_content"] = "[{\"text\":\"Lorem ipsum do
 option_value["parallax_one_contact_info_content"] = "[{\"text\":\"contact@site.com\",\"icon_value\":\"icon-basic-mail\",\"link\":\"#\"},{\"text\":\"Company address\",\"icon_value\":\"icon-basic-geolocalize-01\",\"link\":\"#\"},{\"text\":\"0 332 548 954\",\"icon_value\":\"icon-basic-tablet\",\"link\":\"#\"}]"
 option_value["parallax_one_our_services_subtitle"] = "These are our current services that we offer."
 option_value["parallax_one_our_services_title"] = "Marketing Services"
+option_value["parallax_one_our_story_title"] = "About RMTN"
+option_value["parallax_one_our_story_text"] = "Our team is highly capable of handling any online project from conceptualization to
+execution to marketing. We have dedicated people specific to each skill we offer."
+option_value["paralax_one_our_story_image"] = "<<[site-url]>>/wp-content/uploads/2019/11/about-us.png"
 autoload = "yes"
