--- a/wp-content/vpdb/users/B7/B7A3E3AF671347ECBE22BD58500D5D6C.ini
+++ b/wp-content/vpdb/users/B7/B7A3E3AF671347ECBE22BD58500D5D6C.ini
@@ -33,5 +33,5 @@ managenav-menuscolumnshidden#79B757D723964C1F993C73FCF2DD9A0F[3] = "description"
 managenav-menuscolumnshidden#79B757D723964C1F993C73FCF2DD9A0F[4] = "title-attribute"
 metaboxhidden_nav-menus#0AA0258ACBAA454EA8FA54916D228DC5 = <<<serialized>>> <array>
 metaboxhidden_nav-menus#0AA0258ACBAA454EA8FA54916D228DC5[0] = "add-post_tag"
-<<table-prefix>>user-settings#017D59B070E9417BB0C8AD4376B00CCE = "libraryContent=browse"
-<<table-prefix>>user-settings-time#AB0FA4FC2A1542B586D490F1FBE8E706 = "1573411493"
+<<table-prefix>>user-settings#017D59B070E9417BB0C8AD4376B00CCE = "libraryContent=upload"
+<<table-prefix>>user-settings-time#AB0FA4FC2A1542B586D490F1FBE8E706 = 1574470311
