--- a/wp-content/vpdb/options/th/theme_mods_Parallax-One-production.ini
+++ b/wp-content/vpdb/options/th/theme_mods_Parallax-One-production.ini
@@ -28,4 +28,5 @@ option_value["parallax_one_our_story_text"] = "Our team is highly capable of han
 execution to marketing. We have dedicated people specific to each skill we offer."
 option_value["paralax_one_our_story_image"] = "<<[site-url]>>/wp-content/uploads/2019/11/about-us.png"
 option_value["parallax_one_our_team_subtitle"] = "Meet the RMTN Team"
+option_value["parallax_one_happy_customers_title"] = "Testimonials"
 autoload = "yes"
