[VP] Updated option 'theme_mods_Parallax-One-production'
VP-Action: option/update/theme_mods_Parallax-One-production

X-VP-Version: 4.0-beta2
X-VP-Environment: default

--- a/wp-content/vpdb/options/th/theme_mods_Parallax-One-production.ini
+++ b/wp-content/vpdb/options/th/theme_mods_Parallax-One-production.ini
@@ -29,4 +29,5 @@ execution to marketing. We have dedicated people specific to each skill we offer
 option_value["paralax_one_our_story_image"] = "<<[site-url]>>/wp-content/uploads/2019/11/about-us.png"
 option_value["parallax_one_our_team_subtitle"] = "Meet the RMTN Team"
 option_value["parallax_one_happy_customers_title"] = "Testimonials"
+option_value["parallax_one_happy_customers_subtitle"] = "This is what our clients had to say..."
 autoload = "yes"
