[VP] Updated option 'theme_mods_Parallax-One-production'
VP-Action: option/update/theme_mods_Parallax-One-production

X-VP-Version: 4.0-beta2
X-VP-Environment: default

--- a/wp-content/vpdb/options/th/theme_mods_Parallax-One-production.ini
+++ b/wp-content/vpdb/options/th/theme_mods_Parallax-One-production.ini
@@ -30,4 +30,5 @@ option_value["paralax_one_our_story_image"] = "<<[site-url]>>/wp-content/uploads
 option_value["parallax_one_our_team_subtitle"] = "Meet the RMTN Team"
 option_value["parallax_one_happy_customers_title"] = "Testimonials"
 option_value["parallax_one_happy_customers_subtitle"] = "This is what our clients had to say..."
+option_value["parallax_one_ribbon_title"] = "We build. We market. We deliver."
 autoload = "yes"
