[VP] Updated option 'theme_mods_Parallax-One-production'
VP-Action: option/update/theme_mods_Parallax-One-production

X-VP-Version: 4.0-beta2
X-VP-Environment: default

--- a/wp-content/vpdb/options/th/theme_mods_Parallax-One-production.ini
+++ b/wp-content/vpdb/options/th/theme_mods_Parallax-One-production.ini
@@ -30,5 +30,9 @@ option_value["paralax_one_our_story_image"] = "<<[site-url]>>/wp-content/uploads
 option_value["parallax_one_our_team_subtitle"] = "Meet the RMTN Team"
 option_value["parallax_one_happy_customers_title"] = "Testimonials"
 option_value["parallax_one_happy_customers_subtitle"] = "This is what our clients had to say..."
-option_value["parallax_one_ribbon_title"] = "We build. We market. We deliver."
+option_value["parallax_one_ribbon_title"] = "We build. We market. We deliver.
+<br />
+<small>Google ranks us as one of the top 10 SEO companies.</small>"
+option_value["parallax_one_button_text"] = "Get Started"
+option_value["parallax_one_button_link"] = ""
 autoload = "yes"
