[VP] Updated option 'theme_mods_Parallax-One-production'
VP-Action: option/update/theme_mods_Parallax-One-production

X-VP-Version: 4.0-beta2
X-VP-Environment: default

--- a/wp-content/vpdb/options/th/theme_mods_Parallax-One-production.ini
+++ b/wp-content/vpdb/options/th/theme_mods_Parallax-One-production.ini
@@ -35,4 +35,5 @@ option_value["parallax_one_ribbon_title"] = "We build. We market. We deliver.
 <small>Google ranks us as one of the top 10 SEO companies.</small>"
 option_value["parallax_one_button_text"] = "Get Started"
 option_value["parallax_one_button_link"] = ""
+option_value["parallax_one_copyright"] = "RMTN Marketing 2019"
 autoload = "yes"
