--- a/wp-content/vpdb/options/th/theme_mods_Parallax-One-production.ini
+++ b/wp-content/vpdb/options/th/theme_mods_Parallax-One-production.ini
@@ -36,4 +36,5 @@ option_value["parallax_one_ribbon_title"] = "We build. We market. We deliver.
 option_value["parallax_one_button_text"] = "Get Started"
 option_value["parallax_one_button_link"] = ""
 option_value["parallax_one_copyright"] = "RMTN Marketing 2019"
+option_value["parallax_one_social_icons"] = "[{\"icon_value\":\"icon-social-facebook\",\"link\":\"#\"},{\"icon_value\":\"icon-social-twitter\",\"link\":\"#\"},{\"icon_value\":\"icon-social-linkedin\",\"link\":\"#\"}]"
 autoload = "yes"
