[VP] Post 'Hello world!' moved to trash
VP-Action: post/trash/40CB6A65C68D4B60AEA9E62BF6E5B7E3
VP-Post-Title: Hello world!
VP-Post-Type: post
VP-Post-Format: post

VP-Action: comment/unapprove/020BAE1748014955A046548B5E8C9EE4
VP-Comment-Author: A WordPress Commenter
VP-Comment-PostTitle: Hello world!

VP-Action: post/update/40CB6A65C68D4B60AEA9E62BF6E5B7E3
VP-Post-Title: Hello world!
VP-Post-Type: post
VP-Post-Format: post

VP-Action: postmeta/create/6691F051F61B47B3B836C858EFC41958
VP-Post-Id: 40CB6A65C68D4B60AEA9E62BF6E5B7E3
VP-PostMeta-Key: _wp_trash_meta_status
VP-Post-Type: post
VP-Post-Title: Hello world!

VP-Action: postmeta/create/E2D4689B50FC442D85330395944C513D
VP-Post-Id: 40CB6A65C68D4B60AEA9E62BF6E5B7E3
VP-PostMeta-Key: _wp_trash_meta_time
VP-Post-Type: post
VP-Post-Title: Hello world!

VP-Action: postmeta/create/D89A9E0371234153A2A32514E0B57DA5
VP-Post-Id: 40CB6A65C68D4B60AEA9E62BF6E5B7E3
VP-PostMeta-Key: _wp_desired_post_slug
VP-Post-Type: post
VP-Post-Title: Hello world!

VP-Action: postmeta/create/665C11EA68A241A2B521E3088A3E6EA6
VP-Post-Id: 40CB6A65C68D4B60AEA9E62BF6E5B7E3
VP-PostMeta-Key: _wp_trash_meta_comments_status
VP-Post-Type: post
VP-Post-Title: Hello world!

X-VP-Version: 4.0-beta2
X-VP-Environment: default

--- a/wp-content/vpdb/posts/40/40CB6A65C68D4B60AEA9E62BF6E5B7E3.ini
+++ b/wp-content/vpdb/posts/40/40CB6A65C68D4B60AEA9E62BF6E5B7E3.ini
@@ -6,15 +6,15 @@ post_content = "<!-- wp:paragraph -->
 <!-- /wp:paragraph -->"
 post_title = "Hello world!"
 post_excerpt = ""
-post_status = "publish"
+post_status = "trash"
 comment_status = "open"
 ping_status = "open"
 post_password = ""
-post_name = "hello-world"
+post_name = "hello-world__trashed"
 to_ping = ""
 pinged = ""
-post_modified = "2019-10-29 23:50:53"
-post_modified_gmt = "2019-10-29 23:50:53"
+post_modified = "2019-11-26 23:45:42"
+post_modified_gmt = "2019-11-26 23:45:42"
 post_content_filtered = ""
 guid = "http://www.rmmarketing.dev.cc/?p=1"
 menu_order = "0"
@@ -23,3 +23,8 @@ post_mime_type = ""
 vp_post_author = "B7A3E3AF671347ECBE22BD58500D5D6C"
 vp_post_parent = 0
 vp_term_taxonomy[0] = "A18420C83CA4464AA0743CD4CE24C450"
+_wp_trash_meta_status#6691F051F61B47B3B836C858EFC41958 = "publish"
+_wp_trash_meta_time#E2D4689B50FC442D85330395944C513D = "1574811942"
+_wp_desired_post_slug#D89A9E0371234153A2A32514E0B57DA5 = "hello-world"
+_wp_trash_meta_comments_status#665C11EA68A241A2B521E3088A3E6EA6 = <<<serialized>>> <array>
+_wp_trash_meta_comments_status#665C11EA68A241A2B521E3088A3E6EA6[1] = "1"
