--- a/wp-content/vpdb/comments/02/020BAE1748014955A046548B5E8C9EE4.ini
+++ b/wp-content/vpdb/comments/02/020BAE1748014955A046548B5E8C9EE4.ini
@@ -9,7 +9,7 @@ comment_content = "Hi, this is a comment.
 To get started with moderating, editing, and deleting comments, please visit the Comments screen in the dashboard.
 Commenter avatars come from <a href=\"https://gravatar.com\">Gravatar</a>."
 comment_karma = "0"
-comment_approved = "1"
+comment_approved = "post-trashed"
 comment_agent = ""
 comment_type = ""
 vp_comment_post_ID = "40CB6A65C68D4B60AEA9E62BF6E5B7E3"
