[VP] Page 'Sample Page' moved to trash
VP-Action: post/trash/AF19A05C84DC4A88BCFE3CC58FA9A5B0
VP-Post-Title: Sample Page
VP-Post-Type: page
VP-Post-Format: page

VP-Action: post/update/AF19A05C84DC4A88BCFE3CC58FA9A5B0
VP-Post-Title: Sample Page
VP-Post-Type: page
VP-Post-Format: page

VP-Action: postmeta/create/8BCAF0C7C03147B0847D8C818255675F
VP-Post-Id: AF19A05C84DC4A88BCFE3CC58FA9A5B0
VP-PostMeta-Key: _wp_trash_meta_status
VP-Post-Type: page
VP-Post-Title: Sample Page

VP-Action: postmeta/create/33AB23252BED4FADB1DE0548428AE2C7
VP-Post-Id: AF19A05C84DC4A88BCFE3CC58FA9A5B0
VP-PostMeta-Key: _wp_trash_meta_time
VP-Post-Type: page
VP-Post-Title: Sample Page

VP-Action: postmeta/create/897BA3AB8EC646FAB9617A5D6B33C18E
VP-Post-Id: AF19A05C84DC4A88BCFE3CC58FA9A5B0
VP-PostMeta-Key: _wp_desired_post_slug
VP-Post-Type: page
VP-Post-Title: Sample Page

X-VP-Version: 4.0-beta2
X-VP-Environment: default

--- a/wp-content/vpdb/posts/AF/AF19A05C84DC4A88BCFE3CC58FA9A5B0.ini
+++ b/wp-content/vpdb/posts/AF/AF19A05C84DC4A88BCFE3CC58FA9A5B0.ini
@@ -22,15 +22,15 @@ post_content = "<!-- wp:paragraph -->
 <!-- /wp:paragraph -->"
 post_title = "Sample Page"
 post_excerpt = ""
-post_status = "publish"
+post_status = "trash"
 comment_status = "closed"
 ping_status = "open"
 post_password = ""
-post_name = "sample-page"
+post_name = "sample-page__trashed"
 to_ping = ""
 pinged = ""
-post_modified = "2019-10-29 23:50:53"
-post_modified_gmt = "2019-10-29 23:50:53"
+post_modified = "2019-11-26 23:52:18"
+post_modified_gmt = "2019-11-26 23:52:18"
 post_content_filtered = ""
 guid = "http://www.rmmarketing.dev.cc/?page_id=2"
 menu_order = "0"
@@ -39,3 +39,6 @@ post_mime_type = ""
 vp_post_author = "B7A3E3AF671347ECBE22BD58500D5D6C"
 vp_post_parent = 0
 _wp_page_template#1B240C780C8C4D549A5ED52DE989E164 = "default"
+_wp_trash_meta_status#8BCAF0C7C03147B0847D8C818255675F = "publish"
+_wp_trash_meta_time#33AB23252BED4FADB1DE0548428AE2C7 = "1574812338"
+_wp_desired_post_slug#897BA3AB8EC646FAB9617A5D6B33C18E = "sample-page"
