[VP] Created option 'nav_menu_options'
VP-Action: option/create/nav_menu_options

VP-Action: post/create/4A3309B7602B4CB28C24ABB4003DA495
VP-Post-Title: Home
VP-Post-Type: nav_menu_item
VP-Post-Format: nav_menu_item

VP-Action: post/create/D6357F45DDAC41318A34DFB3BEE502CA
VP-Post-Title:
VP-Post-Type: nav_menu_item
VP-Post-Format: nav_menu_item

VP-Action: post/create/9D5131EBEA18428CB363D5C659DD522F
VP-Post-Title:
VP-Post-Type: nav_menu_item
VP-Post-Format: nav_menu_item

VP-Action: option/update/theme_mods_Parallax-One-production

VP-Action: postmeta/create/B9605282B524461A9DF2BAE5337C71B7
VP-Post-Id: 4A3309B7602B4CB28C24ABB4003DA495
VP-PostMeta-Key: _menu_item_type
VP-Post-Type: nav_menu_item
VP-Post-Title: Home

VP-Action: postmeta/create/DEB259DBE7D644A598A9AA01874C5BEE
VP-Post-Id: 4A3309B7602B4CB28C24ABB4003DA495
VP-PostMeta-Key: _menu_item_menu_item_parent
VP-Post-Type: nav_menu_item
VP-Post-Title: Home

VP-Action: postmeta/create/30E18AA83471478EBEF40F25DE19210B
VP-Post-Id: 4A3309B7602B4CB28C24ABB4003DA495
VP-PostMeta-Key: _menu_item_object_id
VP-Post-Type: nav_menu_item
VP-Post-Title: Home

VP-Action: postmeta/create/CD1C22B1B9F444F6BF5EF3CEE6811CAE
VP-Post-Id: 4A3309B7602B4CB28C24ABB4003DA495
VP-PostMeta-Key: _menu_item_object
VP-Post-Type: nav_menu_item
VP-Post-Title: Home

VP-Action: postmeta/create/861ED335EA9C4858ADACCF636639F9A9
VP-Post-Id: 4A3309B7602B4CB28C24ABB4003DA495
VP-PostMeta-Key: _menu_item_target
VP-Post-Type: nav_menu_item
VP-Post-Title: Home

VP-Action: postmeta/create/DC158C74EA0E45599920871D26E41E6E
VP-Post-Id: 4A3309B7602B4CB28C24ABB4003DA495
VP-PostMeta-Key: _menu_item_classes
VP-Post-Type: nav_menu_item
VP-Post-Title: Home

VP-Action: postmeta/create/0C2A21B99B6D48C0AAE786D61735C361
VP-Post-Id: 4A3309B7602B4CB28C24ABB4003DA495
VP-PostMeta-Key: _menu_item_xfn
VP-Post-Type: nav_menu_item
VP-Post-Title: Home

VP-Action: postmeta/create/A6A9918CB64746F1AA87C12F52AE6829
VP-Post-Id: 4A3309B7602B4CB28C24ABB4003DA495
VP-PostMeta-Key: _menu_it

--- a/wp-content/vpdb/options/th/theme_mods_Parallax-One-production.ini
+++ b/wp-content/vpdb/options/th/theme_mods_Parallax-One-production.ini
@@ -2,6 +2,7 @@
 option_value = <<<serialized>>> <array>
 option_value["custom_css_post_id"] = "-40CB6A65C68D4B60AEA9E62BF6E5B7E3"
 option_value["nav_menu_locations"] = <array>
+option_value["nav_menu_locations"]["primary"] = "3FD5BDCF5F2F4FA2A6989173CEB061DC"
 option_value["paralax_one_logo"] = ""
 option_value["paralax_one_sticky_header"] = <boolean> false
 option_value["paralax_one_full_width_template"] = <boolean> false
